<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_white"
    android:id="@+id/LL1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <ImageView
        android:id="@+id/image_view_sign_in_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_assignment_ind_black_24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edit_text_sign_in_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:hint="@string/your_mail"
        android:textColor="@color/Red"
        android:textColorHint="#FFF"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_sign_in_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:textColor="@color/Red"
            android:hint="@string/your_password"
            android:textColorHint="#FFF"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/button_sign_in_show_password"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:textColor="@color/Crimson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show" />
    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_sign_in_button"
        android:layout_gravity="center"
        android:background="@color/Crimson"
        android:textColor="@color/Wheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />
    <ProgressBar
        android:id="@+id/progress_bar_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/text_view_signUP"
        android:layout_margin="10dp"
        android:textColor="@color/WhiteSmoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/don_t_have_an_account_sign_up_here" />
</LinearLayout>